--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,29 +1,60 @@
 body {
-    background: #fafafa;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #333;
+    margin-top:10px;
+    width: 700px;
 }
 
-.hero-unit {
-    margin: 50px auto 0 auto;
-    width: 300px;
-    font-size: 18px;
-    font-weight: 200;
-    line-height: 30px;
-    background-color: #eee;
-    border-radius: 6px;
-    padding: 60px;
+h1{
+	font-size: 34px;
+	margin: 25px 0;
 }
 
-.hero-unit h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
+.clearFix{
+	clear:both;
+	display: block;
+	width: 100%;
 }
 
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+.product-description fieldset{
+	margin: 10px 0;
+}
+
+.product-description span.label{
+	display: inline-block;
+	min-width: 60px;
+}
+
+.product-description form .price{
+	font-size: 2.7em;
+}
+
+.product-description form .submit{
+	margin: 10px 0 0 0;
+}
+
+.product-description .otherProductsCarousel{
+	max-width: 100%;
+}
+
+.product-description .otherProductsCarousel .ch-carousel-item{
+	max-height: 60px;
+	max-width: 60px;
+}
+
+.product-description .otherProductsCarousel img{
+	max-height: 100%;
+	max-width: 100%;
+}
+
+.moreInfoTabs{
+	border-top: 1px solid #ccc;
+	margin: -10px 0 0 0;
+	padding: 15px 0 0 0;
+}
+
+.text-info{
+	color: #3A87AD;
+}
+
+.text-ok{
+	color: #468847;
 }
