--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,6 +14,10 @@ h1{
 	width: 100%;
 }
 
+.product-description .productGallery{
+	max-width: 300px;
+}
+
 .product-description fieldset{
 	margin: 10px 0;
 }
@@ -37,7 +41,7 @@ h1{
 
 .product-description .otherProductsCarousel .ch-carousel-item{
 	max-height: 60px;
-	max-width: 60px;
+	max-width: 70px;
 }
 
 .product-description .otherProductsCarousel img{
